--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ li.circle:nth-child(4),li.circle:nth-child(5) {
     font-size: 15px;
 }
 .fitness-app{
-    background:#5d345a !important;
+    background:#672d3d !important;
 	}
 .fitness-app h1{
 	font-size:36px;
